authentication-form edited

--- a/css/authentication-form.css
+++ b/css/authentication-form.css
@@ -37,6 +37,30 @@ form {
 #sign-in,
 #sign-up {
   width: 100%;
+  padding: 30px 0;
+}
+
+.content {
+  display: flex;
+  gap: 30px;
+  flex-direction: row;
+}
+
+.form-header {
+  padding-bottom: 30px;
+}
+
+#sign-in-form,
+#sign-up-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.form-input-control {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 a {
@@ -76,10 +100,37 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+.form-submit-control {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+  align-items: center;
+  justify-content: center;
+}
+
 input[type="submit"]:hover {
   background: #294bbb;
 }
 
 .form select {
   height: 30px;
+}
+
+.form-group-horizontal-control {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+label[for="male"],
+label[for="female"],
+label[for="other"] {
+  font-weight: 400;
+}
+
+select#state {
+  padding: 5px;
+  height: 30px;
+  width: 400px;
 }
